Add React + Vite boilerplate

--- a/data/prep.ipynb
+++ b/data/prep.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "from pandasgui import show"
    ]
   },
   {
