--- a/data/prep.ipynb
+++ b/data/prep.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import janitor\n",
     "import pandas as pd\n",
     "from IPython.display import display\n",
     "\n",
@@ -23,7 +24,9 @@
     "- http://geoportal.cm-amadora.pt/graffiti/Arte_Urbana/index.html\n",
     "- https://pandas.pydata.org/pandas-docs/stable/user_guide/integer_na.html\n",
     "- https://stackoverflow.com/questions/39903090/efficiently-replace-values-from-a-column-to-another-column-pandas-dataframe\n",
-    "- https://pyjanitor-devs.github.io/pyjanitor/api/functions/"
+    "- https://pyjanitor-devs.github.io/pyjanitor/api/functions/\n",
+    "- https://ciberduvidas.iscte-iul.pt/consultorio/perguntas/o-uso-das-aspas--e-/13051\n",
+    "- https://justica.gov.pt/sdj/Normas-dos-servicos-digitais/Criacao-de-Conteudos/Livro-de-Estilo/Regras-e-coerencia#Respeitaralgumasregrasquandousamosaspas"
    ]
   },
   {
@@ -110,6 +113,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b68dfc9-e0c1-470c-9661-b84e216439fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"name\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d269bae-be15-42f5-9754-4265b3b3a299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Autoria\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8621df2-2555-4259-bec9-9bf3497eaf59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Freguesia\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc549dbc-1a59-4fb6-80d2-12a510543a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Tipologia\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acc7eebb-cda4-4c1b-b44d-1abe6c8768cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Localizacao\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ddc51b8-8d4a-4394-b65b-f88a5bc09ee0",
    "metadata": {},
    "outputs": [],
@@ -182,7 +235,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.query(\"Autoria == 'Vários'\")"
+    "with pd.option_context(\"display.max_colwidth\", None):\n",
+    "    display(df.query(\"Autoria == 'Vários'\"))"
    ]
   },
   {
@@ -222,11 +276,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "943ccea2-b54f-4d60-a5a5-f54ee2620641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.clean_names()\n",
+    "# df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f6986e26-4278-409a-b667-79e8dc628892",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"Autoria\"] = df[\"Autoria\"].str.replace(\"\\s/\\s\", \"/\", regex=True)"
+    "df[\"autoria\"] = df[\"autoria\"].str.replace(\"\\s/\\s\", \"/\", regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae359a72-a862-41de-89f1-c7534dc0147b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://regex101.com/\n",
+    "\n",
+    "varios_condition = df[\"autoria\"] == \"Vários\"\n",
+    "# varios_value = df[\"descricao\"].str.split(\"(\").str[0]\n",
+    "varios_value = df[\"descricao\"].str.extract(r\"^(.+)\\s\\(\\d{4}\\)\\.\", expand=False)\n",
+    "\n",
+    "apaurb_condition = df[\"autoria\"] == \"APAURB (artistas:Slap, Uber, Kurtz, Ephan e Dome)\"\n",
+    "apaurb_value = df[\"autoria\"].str.extract(r\"\\(artistas:(.+)\\)\", expand=False)\n",
+    "\n",
+    "default_value = pd.NA\n",
+    "\n",
+    "df = df.case_when(\n",
+    "    varios_condition,\n",
+    "    varios_value,\n",
+    "    apaurb_condition,\n",
+    "    apaurb_value,\n",
+    "    default_value,\n",
+    "    column_name=\"autoria_extra\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "148887e3-ac3c-43a7-992c-1d7bb3eec671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df[\"autoria\"].str.startswith(\"APAURB\"), \"autoria\"] = \"APAURB\""
    ]
   },
   {
@@ -237,7 +340,57 @@
    "outputs": [],
    "source": [
     "# with pd.option_context(\"display.max_rows\", None, \"display.max_colwidth\", None):\n",
-    "#     display(df[\"Descricao\"].str.split(\".\", n=1, expand=True, regex=False))"
+    "#     display(df[\"descricao\"].str.split(\".\", n=1, expand=True, regex=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba2e3cdc-5f42-4e0e-8e0e-28aae252007a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "author_year_condition = ~df[\"data\"].isna()\n",
+    "author_year_value = df[\"descricao\"].str.replace(r\"^(.+)\\s\\(\\d{4}\\)\\.?\", \"\", regex=True)\n",
+    "\n",
+    "author_condition = df[\"data\"].isna()\n",
+    "author_value = df[\"descricao\"].str.replace(r\"^([\\w &/]+)\\.\", \"\", regex=True)\n",
+    "\n",
+    "default_value = pd.NA\n",
+    "\n",
+    "df = df.case_when(\n",
+    "    author_year_condition,\n",
+    "    author_year_value,\n",
+    "    author_condition,\n",
+    "    author_value,\n",
+    "    default_value,\n",
+    "    column_name=\"descricao\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad1e123-0338-4503-92a8-9cb8269a14a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cols = [\"autoria\", \"data\", \"descricao\"]\n",
+    "\n",
+    "# with pd.option_context(\"display.max_rows\", None, \"display.max_colwidth\", None):\n",
+    "#     display(df[cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20050c91-21b2-46a5-a68a-58a9d4acdd97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"descricao\"] = df[\"descricao\"].str.strip()\n",
+    "df[\"name\"] = df[\"name\"].str.strip()\n",
+    "df[\"autoria\"] = df[\"autoria\"].str.strip()"
    ]
   },
   {
