--- a/data/prep.ipynb
+++ b/data/prep.ipynb
@@ -382,6 +382,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6aa953ef-b52c-4a6b-be09-835e3bf36e84",
+   "metadata": {},
+   "source": [
+    "**Quotation marks**\n",
+    "\n",
+    "- « »\n",
+    "- “ ”"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "20050c91-21b2-46a5-a68a-58a9d4acdd97",
