--- a/data/prep.ipynb
+++ b/data/prep.ipynb
@@ -47,7 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(RAW_DATA, index_col=\"ID\", verbose=True, dtype={\"Data\": \"Int64\"})"
+    "df = pd.read_excel(\n",
+    "    RAW_DATA,\n",
+    "    # index_col=\"ID\",\n",
+    "    verbose=True,\n",
+    "    dtype={\"Data\": \"Int64\"},\n",
+    ")"
    ]
   },
   {
@@ -390,6 +395,106 @@
     "\n",
     "- « »\n",
     "- “ ”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be639796-e38f-4316-9ddf-30cee0c5fa5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[\"descricao\"] = df[\"descricao\"].str.replace(\"\\\"\\\"\", \"\\\"\", regex=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a652ef6-6e32-4c8a-a7f6-2f4848c7e085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"“\" == \"”\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e12a5232-fb75-4110-9a38-a777a7cebea2",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with pd.option_context(\"display.max_rows\", None, \"display.max_colwidth\", None):\n",
+    "    display(df[[\"id\", \"descricao\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9e4d528-97d8-4178-8c97-a5a4995e233d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citation_double_ids = [1, 3, 28, 35]  # \"\" \"\"\n",
+    "citation_quotes_ids = [9, 15, 17, 19, 25, 47, 48]  # “ .”\n",
+    "citation_quotes_period_ids = [6]  # “ ”\n",
+    "\n",
+    "citation_double_condition = df[\"id\"].isin(citation_double_ids)\n",
+    "citation_quotes_condition = df[\"id\"].isin(citation_quotes_ids)\n",
+    "citation_quotes_period_condition = df[\"id\"].isin(citation_quotes_period_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "921254fc-4bc1-4655-a6b3-7e4f3fc56552",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citation_double_value_1 = df[\"descricao\"].str.replace('\"\"', \"«\", regex=False, n=1)\n",
+    "citation_quotes_value_1 = df[\"descricao\"].str.replace(\"“\", \"«\", regex=False, n=1)\n",
+    "citation_quotes_period_value_1 = df[\"descricao\"].str.replace(\"“\", \"«\", regex=False, n=1)\n",
+    "\n",
+    "df = df.case_when(\n",
+    "    citation_double_condition,\n",
+    "    citation_double_value_1,\n",
+    "    citation_quotes_condition,\n",
+    "    citation_quotes_value_1,\n",
+    "    citation_quotes_period_condition,\n",
+    "    citation_quotes_period_value_1,\n",
+    "    df[\"descricao\"],\n",
+    "    column_name=\"descricao\",\n",
+    ")\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caa6db66-53e0-4af6-9eee-64bd648b6260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citation_double_value_2 = df[\"descricao\"].str.replace('\"\"', \"»\", regex=False, n=1)\n",
+    "citation_quotes_value_2 = df[\"descricao\"].str.replace(\"”\", \"»\", regex=False, n=1)\n",
+    "citation_quotes_period_value_2 = df[\"descricao\"].str.replace(\n",
+    "    \"”\", \".»\", regex=False, n=1\n",
+    ")\n",
+    "\n",
+    "df = df.case_when(\n",
+    "    citation_double_condition,\n",
+    "    citation_double_value_2,\n",
+    "    citation_quotes_condition,\n",
+    "    citation_quotes_value_2,\n",
+    "    citation_quotes_period_condition,\n",
+    "    citation_quotes_period_value_2,\n",
+    "    df[\"descricao\"],\n",
+    "    column_name=\"descricao\",\n",
+    ")\n",
+    "# df.head()"
    ]
   },
   {
