--- a/data/prep2.ipynb
+++ b/data/prep2.ipynb
@@ -85,6 +85,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4d6e3918-4d25-4a49-b295-a7520ef54a42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7d5e2a1-bdc6-4621-9055-7041f11b8582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.clean_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f3c1c46-872a-42a3-9e10-c7122c961a88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d288825-7d19-4516-ba08-3bcd5af6e9a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df[\"autoria\"].str.startswith(\"APAURB\"), \"autoria\"] = \"APAURB\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ebb3d05-a96e-4d45-b432-486ac647923c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"name\"] = df[\"name\"].str.strip()\n",
+    "df[\"autoria\"] = df[\"autoria\"].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67b46afb-dbf8-4ac2-9169-901730884c9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(\"descricao\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7d9c0835-0e2c-470e-826c-7fdf28c99692",
    "metadata": {},
    "outputs": [],
