--- a/data/prep2.ipynb
+++ b/data/prep2.ipynb
@@ -61,6 +61,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbbf4215-be3f-49e0-9bbc-eeb351a47928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[\"Localizacao\"].unique()\n",
+    "# df[\"Titulo\"].value_counts(dropna=False)\n",
+    "# df[\"Freguesia\"].value_counts(dropna=False)\n",
+    "# df[\"Freguesia\"].unique()\n",
+    "df[\"Tipologia\"].unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "019ba1fa-4ab9-4334-bdfa-65d300d93396",
    "metadata": {},
@@ -165,7 +179,8 @@
    "outputs": [],
    "source": [
     "df[\"titulo\"] = df[\"titulo\"].str.strip()\n",
-    "df[\"autoria\"] = df[\"autoria\"].str.strip()"
+    "df[\"autoria\"] = df[\"autoria\"].str.strip()\n",
+    "df[\"localizacao\"] = df[\"localizacao\"].str.strip()"
    ]
   },
   {
